# bix

./: .gitignore  Cargo.toml  todo.txt
benches/: basis.rs  bitstr.rs  parse.rs
benches/scripts/: scalling.py
src/: lib.rs  parse.rs
src/bitstr/: block.rs  iter.rs  mod.rs
wc/: Cargo.toml
wc/src/: main.rs
