[package]
name = "bix"
version = "0.1.0"
authors = ["Jeremy Schwartz <j.schwartz564@icloud.com>"]
edition = "2018"

[dependencies]
#futures = "0.3.4"
tokio = { version = "0.2.16", features = ["rt-threaded", "macros"] }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"

[workspace]
members = ["wc"]
